Fixes overflow issue and over minor styling bugs

--- a/src/app/backend/super-admin/super-admin.component.css
+++ b/src/app/backend/super-admin/super-admin.component.css
@@ -4,7 +4,8 @@
   height: 100%;
 }
 
-.dashboard-card {
+.dashboard-card.admin-content {
+  max-height: 80%;
   position: absolute;
   top: 15px;
   left: 15px;
@@ -89,11 +90,7 @@
   align-items: center;
 }
 
-.super-list-item form .mat-form-field {
-  margin-top: 0px;
-}
-
-.super-list-item form .mat-form-field .mat-form-field-wrapper {
+.mat-form-field-wrapper {
   width: 100%;
   padding-bottom: 0px;
 }
